# internal/models/error_response.go
@@ -1,0 +1,6 @@
+package models
+
+// ErrorResponse represents an error message
+type ErrorResponse struct {
+    Error string `json:"error" example:"invalid request"`
+}
